tests/reference/asr-test_factorial-9983e4f.stderr
semantic error: Arguments do not match for any generic procedure, factorial
 --> tests/errors/test_factorial.py:6:11
  |
6 |     print(factorial(x))
  |           ^^^^^^^^^^^^ 
